--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/860a5eb406.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="header">
@@ -71,6 +72,92 @@
 
     </div>
 
+</div>
+
+<!-- ----------services-------------- -->
+
+<div id="Services">
+    <div class="container">
+        <h1 class="sub-title">My Services</h1>
+        <div class="services-list">
+            <div>
+                <h2>Web Design</h2>
+                <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
+                <a href="#">learn more</a>
+            </div>
+            <div>
+                <h2>UI/UX Design</h2>
+                <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
+                <a href="#">learn more</a>
+            </div>
+            <div>
+                <h2>App Design</h2>
+                <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
+                <a href="#">learn more</a>
+            </div>
+        </div>
+    </div>
+
+</div>
+<!-----------portfolio-------------->
+
+<div id="portfolio">
+    <div class="container">
+        <h1 class="sub-title">My work</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="images/work-1.png">
+                <div class="layer">
+                    <h3>Social media app</h3>
+                    <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/work-2.png">
+                <div class="layer">
+                    <h3>IoT app</h3>
+                    <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
+                    <a href="#"></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/work-3.png">
+                <div class="layer">
+                    <h3>HW monitoring app</h3>
+                    <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
+                    <a href="#">Klik</a>
+                </div>
+            </div>
+        </div>
+        <a href="#", class="btn">See more</a>
+    </div>
+</div>
+
+<!-- ---------contact------------ -->
+
+<div id="Contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact me</h1>
+                <p><i class="fas fa-band-aid"></i> contact@example.com</p>
+                <p> 777 067 777</p>
+                <div class="social-icons">
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                </div>
+            </div>
+            <div class="contact-right">
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required="">
+                    <input type="email" name="email" id="Your email" required="">
+                    <textarea name="Message"  rows="6" placeholder="Your message"></textarea>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
