--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <div class="container">
         <nav>
             <img src="images/logo.png" class="logo">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
+            <ul id="sidemenu">
+                <li><a href="#header">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <i class="fas fa-times" onclick="closemenu()"></i>
             </ul>
+            <i class="fas fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text"> 
             <p>UI/UX designer</p>
@@ -76,7 +78,7 @@
 
 <!-- ----------services-------------- -->
 
-<div id="Services">
+<div id="services">
     <div class="container">
         <h1 class="sub-title">My Services</h1>
         <div class="services-list">
@@ -136,27 +138,31 @@
 
 <!-- ---------contact------------ -->
 
-<div id="Contact">
+<div id="contact">
     <div class="container">
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact me</h1>
-                <p><i class="fas fa-band-aid"></i> contact@example.com</p>
-                <p> 777 067 777</p>
+                <p><i class="fas fa-paper-plane"></i> contact@example.com</p>
+                <p><i class="fas fa-phone-square-alt"></i> 777 067 777</p>
                 <div class="social-icons">
                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     <a href=""><i class="fa-brands fa-square-twitter"></i></a>
                 </div>
+                <a href="images/my-cv.pdf" download class="btn btn2">Download Cv</a>
             </div>
             <div class="contact-right">
                 <form>
                     <input type="text" name="Name" placeholder="Your Name" required="">
                     <input type="email" name="email" id="Your email" required="">
                     <textarea name="Message"  rows="6" placeholder="Your message"></textarea>
-                    <button type="submit">Submit</button>
+                    <button type="submit" class="btn btn2">Submit</button>
                 </form>
             </div>
         </div>
+    </div>
+    <div class="copyright">
+        <p>copyright Martin. Made with by Easy tutorials</p>
     </div>
 </div>
 
@@ -176,6 +182,19 @@
         document.getElementById(tabname).classList.add("active-tab");
     }
     
+</script>
+
+<script>
+
+    var sidemenu = document.getElementById("sidemenu");
+
+    function openmenu(){
+        sidemenu.style.right = "0";
+    }
+    function closemenu(){
+        sidemenu.style.right = "-200px";
+    }
+
 </script>
 
 </body>
