--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <div id="header">
     <div class="container">
         <nav>
-            <img src="images/logo.png" class="logo">
+            <img src="images/Bez názvu-1.png" class="logo">
             <ul id="sidemenu">
-                <li><a href="#header">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#header">Domů</a></li>
+                <li><a href="#about">O mně</a></li>
+                <li><a href="#services">Služby</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">Kontakt</a></li>
                 <i class="fas fa-times" onclick="closemenu()"></i>
             </ul>
             <i class="fas fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text"> 
-            <p>UI/UX designer</p>
-            <h1>Hi, Im <span>Martin</span> <br> Tehnik from CZE</h1>
+            <p>Junior software developer</p>
+            <h1> <span>Martin</span> <br> Těhník</h1>
         </div>
     </div>
 </div>
@@ -33,40 +33,33 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/user.png">
+                <img src="images/IMG_2941.JPG">
             </div>
             <div class="about-col-2">
-                <h1 class="sub-title">About me</h1>
-                <p>Ahoj jmenuju se Martin prave studuji VS v Liberci a neni to uplne vonco tak si hledam praci
-                    Ahoj jmenuju se Martin prave studuji VS v Liberci a neni to uplne vonco tak si hledam praci
-                    Ahoj jmenuju se Martin prave studuji VS v Liberci a neni to uplne vonco tak si hledam praci
-                    Ahoj jmenuju se Martin prave studuji VS v Liberci a neni to uplne vonco tak si hledam praci
-                    Ahoj jmenuju se Martin prave studuji VS v Liberci a neni to uplne vonco tak si hledam praci
-                    Ahoj jmenuju se Martin prave studuji VS v Liberci a neni to uplne vonco tak si hledam praci</p>
+                <h1 class="sub-title">O mně</h1>
+                <p>Jmenuju se Martin Těhník a právě studuji na VŠ v Liberci, obor mechatronika. Zároveň pracuji jako Software developer na juniorní pozici ve firmě Jablotron Controls.
+                   Mezi mé přednosti patří teamleading, týmová práce, samostatnost a jsem otevřený novým věcem.</p>
                 <div class="tab-titles">
-                    <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                    <p class="tab-links"onclick="opentab('experience')">Experience</p>
-                    <p class="tab-links"onclick="opentab('education')">Education</p>
+                    <p class="tab-links active-link" onclick="opentab('skills')">Dovednosti</p>
+                    <p class="tab-links"onclick="opentab('experience')">Zkušenosti</p>
+                    <p class="tab-links"onclick="opentab('education')">Vzdělání</p>
                 </div>
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
-                        <li><span>UI/UX</span><br>Designing web/app interfaces</li>
-                        <li><span>Web development</span><br>Web app development</li>
-                        <li><span>App development</span><br>Building Android/iOS apps</li>
+                        <li><span>Programování</span><br>Jazyky: C, Python, C#, Html, CSS </li>
+                        <li><span>IoT</span><br>Návrh a design IoT sítě</li>
+                        <li><span>Komunikace</span><br>Problem solving, komunikace s netechnickými lidmi</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="experience">
                     <ul>
-                        <li><span>2021 - Current</span><br>UI/UX design training</li>
-                        <li><span>2019 - 2021</span><br>Team lead</li>
-                        <li><span>2017 - 2019</span><br>Executive at Coin</li>
+                        <li><span>2020 - Current</span><br>Part time Junior Software dev in Jablotron Controls</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2016</span><br>UI/UX design training at ET institute</li>
-                        <li><span>2015</span><br>MBA from MIT Bangalore</li>
-                        <li><span>2014</span><br>BBA from ISM Bangalore</li>
+                        <li><span>2023 - present</span><br>TUL Liberec, obor: mechatronika</li>
+                        <li><span>2019-2023</span><br>SPŠSE A VOŠ Liberec, obor: automatizace a řídící systémy</li>
                     </ul>
                 </div>
             </div>
@@ -83,18 +76,18 @@
         <h1 class="sub-title">My Services</h1>
         <div class="services-list">
             <div>
-                <h2>Web Design</h2>
-                <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
+                <h2>Backend</h2>
+                <p>Backendové scripty pro analýzu a uchování dat, masivní využítí v IoT.</p>
                 <a href="#">learn more</a>
             </div>
             <div>
-                <h2>UI/UX Design</h2>
-                <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
+                <h2>Konzolové aplikace</h2>
+                <p>Aplikace určené pro sběr různých dat a následná další práce s nimi.</p>
                 <a href="#">learn more</a>
             </div>
             <div>
-                <h2>App Design</h2>
-                <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
+                <h2>Web design</h2>
+                <p>Design webové stránky použitím HTML a CSS, nebo pomocí pythonu a frameworku dash.</p>
                 <a href="#">learn more</a>
             </div>
         </div>
@@ -105,30 +98,30 @@
 
 <div id="portfolio">
     <div class="container">
-        <h1 class="sub-title">My work</h1>
+        <h1 class="sub-title">Moje práce</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/work-1.png">
+                <img src="images/20231112_121539124_iOS.jpg">
                 <div class="layer">
-                    <h3>Social media app</h3>
-                    <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
-                    <a href="#"></a>
+                    <h3>IoT aplikace pro měření atmosferických dat</h3>
+                    <p>Jedná se o propojení dvou M5stack modulů, kde jeden modul slouží ke sběru dat a druhý jako ovladač a zobrazovač dat. M5stack sloužící k ovládání je schopen dále bezdrátově ovládat světýlka.</p>
+                    <a href="#">Klikni</a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-2.png">
+                <img src="images/20231112_121427773_iOS.jpg">
                 <div class="layer">
-                    <h3>IoT app</h3>
-                    <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
-                    <a href="#"></a>
+                    <h3>Webová aplikace pro sběr online dat</h3>
+                    <p>Webová stránka pro monitoring Raspberry Pi a dalších onlines services dělaná pro firmu Jablotron Controls.</p>
+                    <a href="#">Klikni</a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-3.png">
+                <img src="images/20231112_122639266_iOS.jpg">
                 <div class="layer">
-                    <h3>HW monitoring app</h3>
-                    <p>Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,Ahoj lidi nevim k cemu to je a tak to testuju,</p>
-                    <a href="#">Klik</a>
+                    <h3>WinForms aplikace na vizualizaci dat posílaných po MODBUS</h3>
+                    <p>Aplikace pro windows počítač, která na základě COM portu je schopna vyčítat data z jednotky od firmy Wavin.</p>
+                    <a href="#">Klikni</a>
                 </div>
             </div>
         </div>
@@ -143,26 +136,23 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact me</h1>
-                <p><i class="fas fa-paper-plane"></i> contact@example.com</p>
-                <p><i class="fas fa-phone-square-alt"></i> 777 067 777</p>
+                <p><i class="fas fa-paper-plane"></i> m4rtin.tehnik@gmail.com</p>
+                <p><i class="fas fa-phone-square-alt"></i> +777 053 377</p>
                 <div class="social-icons">
                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     <a href=""><i class="fa-brands fa-square-twitter"></i></a>
                 </div>
-                <a href="images/my-cv.pdf" download class="btn btn2">Download Cv</a>
+                <a href="images/my-cv.pdf" download class="btn btn2">Stáhni si Cv</a>
             </div>
             <div class="contact-right">
-                <form onsubmit="sendEmail(); reset(); return false;">
+                <form action="https://formsubmit.co/m4rtin.tehnik@gmail.com" method="POST">
                     <input type="text" name="Name" placeholder="Your Name" required="">
                     <input type="email" id="email" name="email" placeholder="Your email" required="">
                     <textarea name="Message"  rows="6" placeholder="Your message"></textarea>
-                    <button type="submit" class="btn btn2">Send</button>
+                    <button type="submit" class="btn btn2">Poslat</button>
                 </form>
             </div>
         </div>
-    </div>
-    <div class="copyright">
-        <p>copyright Martin. Made with by Easy tutorials</p>
     </div>
 </div>
 
@@ -193,26 +183,6 @@
     }
     function closemenu(){
         sidemenu.style.right = "-200px";
-    }
-
-</script>
-
-<script src= "https://smtpjs.com/v3/smtp.js"></script>
-<script>
-
-    function sendEmail(){
-        Email.send({
-            Host : "smtp.elasticemail.com",
-            Username : "martehn019@g.pslib.cz",
-            Password : "12B338583581B6D011B22EFDA3ED7C0E886C",
-            To : document.getElementById("email").value,
-            From : "martehn019@g.pslib.cz",
-            Subject : "This is the subject",
-            Body : "And this is the body"
-
-        }).then(
-            message => alert(message)
-        );
     }
 
 </script>
