--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/OIG.jfif">
     <script src="https://kit.fontawesome.com/860a5eb406.js" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1369998927818182"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="header">
