--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
                 <p><i class="fas fa-paper-plane"></i> m4rtin.tehnik@gmail.com</p>
                 <p><i class="fas fa-phone-square-alt"></i> +777 053 377</p>
                 <div class="social-icons">
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/martin-t%C4%9Bhnik-63454322a/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href="https://github.com/Martinos21"><i class="fa-brands fa-github"></i>
                 </div>
                 <a href="images/my-cv.pdf" download class="btn btn2">Stáhni si Cv</a>
             </div>
