--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="layer">
                     <h3>IoT aplikace pro měření atmosferických dat</h3>
                     <p>Jedná se o propojení dvou M5stack modulů, kde jeden modul slouží ke sběru dat a druhý jako ovladač a zobrazovač dat. M5stack sloužící k ovládání je schopen dále bezdrátově ovládat světýlka.</p>
-                    <a href="#">Klikni</a>
+                    <a href="https://github.com/Martinos21/Maturitni-prace">Klikni</a>
                 </div>
             </div>
             <div class="work">
@@ -124,7 +124,7 @@
                 <div class="layer">
                     <h3>WinForms aplikace na vizualizaci dat posílaných po MODBUS</h3>
                     <p>Aplikace pro windows počítač, která na základě COM portu je schopna vyčítat data z jednotky od firmy Wavin.</p>
-                    <a href="#">Klikni</a>
+                    <a href="https://github.com/Martinos21/C-app-simple-data">Klikni</a>
                 </div>
             </div>
         </div>
