final english transform

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="images/IMG_2941.JPG">
             </div>
             <div class="about-col-2">
-                <h1 class="sub-title">O mně</h1>
+                <h1 class="sub-title">About me</h1>
                 <p>My name is Martin Těhník and I am currently studying at the University of Liberec, majoring in mechatronics. At the same time, I work as a Software developer in a junior position at Jablotron Controls.
                 My strengths include team leading, teamwork, independence and I am open to new things.</p>
                 <div class="tab-titles">
@@ -80,7 +80,7 @@
         <div class="services-list">
             <div>
                 <h2>Backend</h2>
-                <p>Backendové scripts for analyzing and storing data, massive usage in IoT.</p>
+                <p>Backend scripts for analyzing and storing data, massive usage in IoT.</p>
                 <a href="#">learn more</a>
             </div>
             <div>
