--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
             <div class="work">
                 <img src="images/20231112_121539124_iOS.jpg">
                 <div class="layer">
-                    <h3>IoT application for measuring atmospheric data</h3>
-                    <p>It is a connection of two M5stack modules, where one module is used for data collection and the other as a controller and data display. The M5stack used for control is also able to control the lights wirelessly.</p>
-                    <a href="https://github.com/Martinos21/Maturitni-prace">Klikni</a>
+                    <h3>Accuweather mobile app</h3>
+                    <p>This is an app targeting mobile devices with iOS and Android 14. Built with .NET Maui and Accuweather API.</p>
+                    <a href="https://github.com/Martinos21/Accuweather_app">Show</a>
                 </div>
             </div>
             <div class="work">
@@ -116,7 +116,7 @@
                 <div class="layer">
                     <h3>Web application for online data collection</h3>
                     <p>Website for Raspberry Pi monitoring and other online services made for Jablotron Controls.</p>
-                    <a href="#">Klikni</a>
+                    <a href="#">Show</a>
                 </div>
             </div>
             <div class="work">
@@ -124,7 +124,7 @@
                 <div class="layer">
                     <h3>WinForms application for visualization of data sent via MODBUS</h3>
                     <p>An application for a Windows computer that, based on the COM port, is able to read data from the Wavin unit.</p>
-                    <a href="https://github.com/Martinos21/C-app-simple-data">Klikni</a>
+                    <a href="https://github.com/Martinos21/C-app-simple-data">Show</a>
                 </div>
             </div>
         </div>
